syntax = "proto3";

option csharp_namespace = "PetKeeperMobileApp";

package user;


service UserService {
	rpc CreateUser (UserCreate) returns (DefaultResponse);
	rpc ResetPassword (ResetPasswordRequest) returns (DefaultResponse);
}

message UserCreate {
	string email = 1;
	string username = 2;
	// TO DO: dodać username
}

message ResetPasswordRequest {
	string email = 1;
}

message DefaultResponse {
	string message = 1;
}

//MOŻNA NA RAZIE TEGO NIE IMPLEMENTOWAĆ

//Zwraca info: "Na twój adres e-mail została wysłana wiadomość umożliwiająca zmianę hasła."

//Komunikaty błędów
//Konto o podanym adresie e-mail nie istnieje